Title padding fixed on mobile.

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -175,7 +175,7 @@ button {
 		cursor: default;
 		
 		@media (max-width: $breakpointMobile) {
-			padding: 3vw 0 1.5vw;
+			padding: 1.6vw 0;
 			margin: 0 0 5vw;
 			box-shadow: 1.5vw 1.5vw 0 #4ca0ff;
 			font-size: 15vw;
